# Rust-Accelerator-Capstone-ROT

./: .gitignore  README.md  azure-pipelines-1.yml  azure-pipelines.yml
Cloud/IaC/: README.md  main.bicep  rotpoc2.bicepparam
Cloud/IaC/modules/: ContainerApp.bicep  ContainerAppEnvironment.bicep  ContainerRegistry.bicep  CosmosDB.bicep  LogAnalytics.bicep
Cloud/device-comms/: Cargo.toml  Dockerfile  README.md
Cloud/device-comms/src/: lib.rs  main.rs
Cloud/device-comms/src/app_state/: app_state.rs  mod.rs
Cloud/device-comms/src/domain/: Telemetry.rs  error.rs  mod.rs  telemetry.rs
Cloud/device-comms/src/routes/: ingest_telemetry.rs  mod.rs  read_telemetry.rs
Cloud/device-comms/src/services/: cosmos_db_telemetry_store.rs
Cloud/device-comms/src/utils/: mod.rs  tracing.rs
Cloud/device-comms/tests/api/: helper.rs  ingest.rs  main.rs  read.rs
Cloud/device-config/: Cargo.toml  Dockerfile  README.md
Cloud/device-config/src/: lib.rs  main.rs
Cloud/device-config/src/app_state/: app_state.rs  mod.rs
Cloud/device-config/src/domain/: config.rs  error.rs  mod.rs
Cloud/device-config/src/routes/: get_config.rs  mod.rs  update_config.rs
Cloud/device-config/src/services/: azure_auth.rs  cosmos_db_telemetry_store.rs  mod.rs
Cloud/device-config/src/utils/: mod.rs  tracing.rs
Cloud/device-config/tests/api/: get_config.rs  helper.rs  main.rs  update_config.rs
Cloud/device-monitor/: Cargo.toml  Dockerfile  README.md
Cloud/device-monitor/src/: lib.rs  main.rs
Cloud/device-monitor/src/app_state/: app_state.rs  mod.rs
Cloud/device-monitor/src/domain/: error.rs  mod.rs  telemetry.rs
Cloud/device-monitor/src/routes/: mod.rs  read_telemetry.rs
Cloud/device-monitor/src/services/: azure_auth.rs  cosmos_db_telemetry_store.rs  mod.rs
Cloud/device-monitor/src/utils/: mod.rs  tracing.rs
Cloud/device-monitor/tests/api/: helper.rs  main.rs  read.rs
Cloud/rot-fe/: Cargo.toml  Dockerfile  README.md  build.rs  index.html  package-lock.json  package.json
Cloud/rot-fe/scripts/: local-docker.sh
Cloud/rot-fe/src/: main.rs
Cloud/rot-fe/src/components/: chart.rs  header.rs  mod.rs  navbar.rs
Cloud/rot-fe/src/domain/: config.rs  mod.rs  telemetry.rs
Cloud/rot-fe/src/services/: device_service.rs
Cloud/rot-fe/src/views/: config_view.rs  mod.rs  telemetry_view.rs
Docs/Cloud/rot-fe/: YEW_TAILWIND_SETUP.md
Docs/Embedded/: Setup.md
Embedded/debug-server/: Cargo.toml  README.md
Embedded/debug-server/src/: main.rs
Embedded/rp-rot/: Cargo.toml  README.md  build.rs
Embedded/rp-rot/scripts/: deploy-debug.sh  deploy-firmware.sh
Embedded/rp-rot/src/: main.rs  main.rsold
Embedded/rp-rot/src/config/: device.rs  mod.rs  telemetry.rs  wifi.rs
Embedded/rp-rot/src/drivers/: led.rs  mod.rs  temperature.rs  wifi.rs
Embedded/rp-rot/src/error/: mod.rs
Embedded/rp-rot/src/network/: mod.rs
Embedded/rp-rot/src/tasks/: blinker.rs  config_fetch.rs  cyw43.rs  mod.rs  network.rs  telemetry.rs
Embedded/rp-rot/src/utils/: config_store.rs  debug_server.rs  mod.rs
Pipelines/: README.md  build-device-config.yml  build-device-monitor.yml  build-rot-fe.yml  deploy-infra.yml
