[package]
name = "device-comms"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["secrets", "tls", "json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.140"
dotenvy = "0.15.7"
rocket_cors = "0.6.0"
azure_identity = "0.24.0"
azure_security_keyvault_secrets = "0.3.0"
tokio = "1.45.1"
azure_data_cosmos = { version = "0.23.0", features = ["key_auth"] }
chrono = { version = "0.4.30", features = ["serde"] }
azure_core = "0.1.1"
futures = "0.3.31"