[package]
edition = "2021"
name = "rp-rot"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[dependencies]
cortex-m-rt = "0.7"
embedded-hal = { version = "1.0.0" }

embassy-executor = { version = "0.7.0", features = [
    "task-arena-size-32768",
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
] }
embassy-time = { version = "0.4.0", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
embassy-rp = { version = "0.4.0", features = [
    "defmt",
    "unstable-pac",
    "time-driver",
    "critical-section-impl",
    "rp2040",
] }

# WiFi and networking
embassy-net = { version = "0.7.0", features = [
    "defmt",
    "tcp",
    "udp",
    "dhcpv4",
    "proto-ipv4",
    "dns",
] }

cyw43 = { version = "0.3.0", features = ["defmt"] }
cyw43-pio = { version = "0.4.0", features = ["defmt"] }
static_cell = "1.2"

# Use rand-core instead of rand for embedded
rand_core = "0.6"

defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "1", features = ["print-defmt"] }

heapless = "0.8"
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"

embassy-sync = "0.7.0" # For shared state


[build-dependencies]
dotenvy = "0.15"

# but you can use any BSP. Uncomment this to use the pro_micro_rp2040 BSP instead
# sparkfun-pro-micro-rp2040 = "0.8"

# If you're not going to use a Board Support Package you'll need these:
# rp2040-hal = { version="0.11", features=["rt", "critical-section-impl"] }
# rp2040-boot2 = "0.3"

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
